--- a/aboutus.html
+++ b/aboutus.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <div class="head_contain">
+      <div class="container head_contain">
         <div class="menu_btn"><i class="fas fa-bars"></i></div>
         <a href="./" class="logo">金吉生活推車五金</a>
         <ul class="head_nav">
@@ -36,48 +36,61 @@
       style="background-image: url(./images/about/sol-tZw3fcjUIpM-unsplash.jpg)"
     ></div>
     <div class="about_page">
-      <div class="top">
-        <div class="text">
-          <div class="title">關於我們</div>
-          <div class="desc">
-            中盈五金車輪行在地經營數十年，是許多勞工朋友、工廠的好
-            夥伴，只要您有任何推車相關的問題，我們都能給你最專業的
-            產品服務，我們也有快速的維修站只您的產品有任何損壞，
-            我們都能第一時間幫您服務,讓您的生財工具恢復如初，若有
-            需要我們服務的地方，歡迎來中盈找我們。
+      <div class="container">
+        <div class="top">
+          <div class="text">
+            <div class="title">關於我們</div>
+            <div class="desc">
+              中盈五金車輪行在地經營數十年，是許多勞工朋友、工廠的好
+              夥伴，只要您有任何推車相關的問題，我們都能給你最專業的
+              產品服務，我們也有快速的維修站只您的產品有任何損壞，
+              我們都能第一時間幫您服務,讓您的生財工具恢復如初，若有
+              需要我們服務的地方，歡迎來中盈找我們。
+            </div>
+          </div>
+          <div class="item_list">
+            <div class="item">
+              <div class="pic">
+                <img src="./images/about/member.png" alt="" />
+              </div>
+              專人諮詢
+            </div>
+            <div class="item">
+              <div class="pic">
+                <img src="./images/about/cart.png" alt="" />
+              </div>
+              線上型錄
+            </div>
+            <div class="item">
+              <div class="pic">
+                <img src="./images/about/wrench.png" alt="" />
+              </div>
+              維修服務
+            </div>
           </div>
         </div>
-        <div class="item_list">
-          <div class="item">
-            <div class="pic"><img src="./images/about/member.png" alt=""></div>
-            專人諮詢
+        <div class="bottom">
+          <div class="pic">
+            <img
+              src="./images/about/theme-photos-Klby0nxseY8-unsplash.jpg"
+              alt=""
+            />
           </div>
-          <div class="item">
-            <div class="pic"><img src="./images/about/cart.png" alt=""></div>
-            線上型錄
-          </div>
-          <div class="item">
-            <div class="pic"><img src="./images/about/wrench.png" alt=""></div>
-            維修服務
-          </div>
-        </div>
-      </div>
-      <div class="bottom">
-        <div class="pic"><img src="./images/about/theme-photos-Klby0nxseY8-unsplash.jpg" alt=""></div>
-        <div class="text">
-          <div class="title">主要服務項目</div>
-          <div class="desc">
-            手推車、工業用推車、拖板車、車、水泥車、菜籃車
-            車輪、腳輪、推車輪、工具車輪、橡膠輪胎、PU輪胎、
-            打氣輪、推車維修、車輪維修、彈性橡膠繩、鐵條、
-            鉤子、擺攤架、磅秤、電子秤、台秤、吊秤、陽傘。
+          <div class="text">
+            <div class="title">主要服務項目</div>
+            <div class="desc">
+              手推車、工業用推車、拖板車、車、水泥車、菜籃車
+              車輪、腳輪、推車輪、工具車輪、橡膠輪胎、PU輪胎、
+              打氣輪、推車維修、車輪維修、彈性橡膠繩、鐵條、
+              鉤子、擺攤架、磅秤、電子秤、台秤、吊秤、陽傘。
+            </div>
           </div>
         </div>
       </div>
     </div>
     <footer>
       <div class="contain">
-        <div class="con">
+        <div class="container con">
           <div class="left">
             <a href="#" class="foot_logo">金吉生活推車五金</a>
             <dic class="social">
