--- a/cart_finish.html
+++ b/cart_finish.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <div class="head_contain">
+      <div class="container head_contain">
         <div class="menu_btn"><i class="fas fa-bars"></i></div>
         <a href="./" class="logo">金吉生活推車五金</a>
         <ul class="head_nav">
@@ -38,7 +38,7 @@
       "
       data-name="PRODUCTS"
     ></div>
-    <div class="contain">
+    <div class="container">
       <ul class="bread">
         <li>
           <a href="./"><i class="fas fa-home"></i>首頁</a>
@@ -48,7 +48,7 @@
       </ul>
     </div>
     <div class="cart_page">
-      <div class="contain">
+      <div class="container">
         <div class="result">
           <div class="circle"><i class="fas fa-check-circle"></i></div>
           <div class="desc">
@@ -59,7 +59,7 @@
     </div>
     <footer>
       <div class="contain">
-        <div class="con">
+        <div class="container con">
           <div class="left">
             <a href="#" class="foot_logo">金吉生活推車五金</a>
             <dic class="social">
