--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header class="white">
-      <div class="head_contain">
+      <div class="container head_contain">
         <div class="menu_btn"><i class="fas fa-bars"></i></div>
         <a href="./" class="logo">金吉生活推車五金</a>
         <ul class="head_nav">
@@ -62,7 +62,7 @@
     </div>
     <footer>
       <div class="contain">
-        <div class="con">
+        <div class="container con">
           <div class="left">
             <a href="#" class="foot_logo">金吉生活推車五金</a>
             <dic class="social">
