--- a/float.html
+++ b/float.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="./css/page.css" />
   </head>
   <body>
-    <header class="white">
-      <div class="head_contain">
+    <header>
+      <div class="container head_contain">
         <div class="menu_btn"><i class="fas fa-bars"></i></div>
         <a href="./" class="logo">金吉生活推車五金</a>
         <ul class="head_nav">
@@ -38,7 +38,7 @@
       "
     ></div>
     <div class="float_page">
-      <div class="contain">
+      <div class="container">
         <div class="title">線上購物流程</div>
         <div class="list">
           <div class="item">
@@ -86,7 +86,7 @@
     </div>
     <footer>
       <div class="contain">
-        <div class="con">
+        <div class="container con">
           <div class="left">
             <a href="#" class="foot_logo">金吉生活推車五金</a>
             <dic class="social">
