--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       "
     >
       <div class="text">
-        <div class="con">
+        <a class="con" href="#">
           <div class="title">
             <div class="title_inner">
               線上購買流程
@@ -120,7 +120,7 @@
             我們提供線上型錄瀏覽及訂購服務<br />
             方便您隨時隨地查詢下單。
           </div>
-        </div>
+        </a>
       </div>
     </div>
     <div class="index_news">
@@ -130,16 +130,16 @@
         <div class="list">
           <a href="./news_info.html" class="item"
             ><div class="time">2021-01-23</div>
-            物流零件專業製造新規格登場!</a
-          >
+            <span>物流零件專業製造新規格登場!</span>
+          </a>
           <a href="./news_info.html" class="item"
             ><div class="time">2021-01-23</div>
-            物流零件專業製造新規格登場!</a
-          >
+            <span>物流零件專業製造新規格登場!</span>
+          </a>
           <a href="./news_info.html" class="item"
             ><div class="time">2021-01-23</div>
-            物流零件專業製造新規格登場!</a
-          >
+            <span>物流零件專業製造新規格登場!物流零件專業製造新規格登場!物流零件專業製造新規格登場!</span>
+          </a>
         </div>
       </div>
     </div>
