--- a/product.html
+++ b/product.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <div class="head_contain">
+      <div class="container head_contain">
         <div class="menu_btn"><i class="fas fa-bars"></i></div>
         <a href="./" class="logo">金吉生活推車五金</a>
         <ul class="head_nav">
@@ -38,7 +38,7 @@
       "
       data-name="PRODUCTS"
     ></div>
-    <div class="contain">
+    <div class="container">
       <ul class="bread">
         <li>
           <a href="./"><i class="fas fa-home"></i>首頁</a>
@@ -48,137 +48,139 @@
       </ul>
     </div>
 
-    <div class="product_frame">
-      <div class="left_menu">
-        <div class="left_menu_border">
-          <div class="title">所有商品</div>
-          <ul>
-            <li class="active">
-              <div class="name">工業腳輪</div>
-              <ul>
-                <li class="active"><a href="#">全部品項</a></li>
-                <li><a href="#">手推車</a></li>
-                <li><a href="#">烏龜車</a></li>
-              </ul>
-            </li>
-            <li>
-              <div class="name">推車系列</div>
-              <ul>
-                <li class="active"><a href="#">全部品項</a></li>
-                <li><a href="#">手推車</a></li>
-                <li><a href="#">烏龜車</a></li>
-              </ul>
-            </li>
-            <li>
-              <div class="name">調整腳架</div>
-              <ul>
-                <li class="active"><a href="#">全部品項</a></li>
-                <li><a href="#">手推車</a></li>
-                <li><a href="#">烏龜車</a></li>
-              </ul>
-            </li>
-            <li>
-              <div class="name">PU輪胎</div>
-              <ul>
-                <li class="active"><a href="#">全部品項</a></li>
-                <li><a href="#">手推車</a></li>
-                <li><a href="#">烏龜車</a></li>
-              </ul>
-            </li>
-            <li>
-              <div class="name">其他五金配件</div>
-              <ul>
-                <li class="active"><a href="#">全部品項</a></li>
-                <li><a href="#">手推車</a></li>
-                <li><a href="#">烏龜車</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="product_border">
-        <div class="product_info">
-          <div class="top">
-            <div class="main_pic">
-              <div
-                class="image"
-                style="background-image: url(./images/products/pic.png)"
-              ></div>
-            </div>
-            <div class="text">
-              <div class="name">500kg摺疊式手推車(5吋輪組)</div>
-              <div class="desc">
-                折疊式手推車,手把可90*折疊,輕巧易收納。面板採高級耐衝塑膠,抗腐蝕且堅固耐用,載重可達500kg,運用在各種物流搬運作業。搭配5x1.5吋台車橡膠腳輪,具有高彈性、耐磨損等特性,輕推耐用。
-              </div>
-              <div class="price_qty">
-                <div class="price">$1699</div>
-                <div class="qty">
-                  <label>數量</label>
-                  <div class="input">
-                    <div class="minus"><i class="fas fa-minus"></i></div>
-                    <input type="number" value="1" disabled />
-                    <div class="plus"><i class="fas fa-plus"></i></div>
-                  </div>
-                </div>
-              </div>
-              <div class="add_cart">
-                <a>加入購物車</a>
-              </div>
-            </div>
-          </div>
-          <div class="bottom">
-            <ul class="tabs">
-              <li class="active">商品詳情</li>
-              <li>運費說明</li>
-              <li>注意事項</li>
-            </ul>
-            <ul class="panels">
+    <div class="container">
+      <div class="product_frame">
+        <div class="left_menu">
+          <div class="left_menu_border">
+            <div class="title">所有商品</div>
+            <ul>
               <li class="active">
-                <div class="editor">
-                  <div>
-                    <p>這是第一頁</p>
-                    <p>
-                      1.下標後約3-7個工作天出貨,例假日國定假日人員休息無法出貨.出貨日將會順延。
-                    </p>
-                    <p>2.下標後六天內未結帳將取消訂單。</p>
-                  </div>
-                </div>
+                <div class="name">工業腳輪</div>
+                <ul>
+                  <li class="active"><a href="#">全部品項</a></li>
+                  <li><a href="#">手推車</a></li>
+                  <li><a href="#">烏龜車</a></li>
+                </ul>
               </li>
               <li>
-                <div class="editor">
-                  <div>
-                    <p>這是第二頁</p>
-                    <p>
-                      1.下標後約3-7個工作天出貨,例假日國定假日人員休息無法出貨.出貨日將會順延。
-                    </p>
-                    <p>2.下標後六天內未結帳將取消訂單。</p>
-                    <p>3.維護雙方權,拆箱時務必錄影存證清點物品數量,</p>
-                  </div>
-                </div>
+                <div class="name">推車系列</div>
+                <ul>
+                  <li class="active"><a href="#">全部品項</a></li>
+                  <li><a href="#">手推車</a></li>
+                  <li><a href="#">烏龜車</a></li>
+                </ul>
               </li>
               <li>
-                <div class="editor">
-                  <div>
-                    <p>這是第三頁</p>
-                    <p>
-                      1.下標後約3-7個工作天出貨,例假日國定假日人員休息無法出貨.出貨日將會順延。
-                    </p>
-                    <p>2.下標後六天內未結帳將取消訂單。</p>
-                    <p>3.維護雙方權,拆箱時務必錄影存證清點物品數量,</p>
-                    <p>
-                      4.如有瑕疵或漏寄,請提供影片方便我們協助您,避免有爭議。
-                    </p>
-                  </div>
-                </div>
+                <div class="name">調整腳架</div>
+                <ul>
+                  <li class="active"><a href="#">全部品項</a></li>
+                  <li><a href="#">手推車</a></li>
+                  <li><a href="#">烏龜車</a></li>
+                </ul>
+              </li>
+              <li>
+                <div class="name">PU輪胎</div>
+                <ul>
+                  <li class="active"><a href="#">全部品項</a></li>
+                  <li><a href="#">手推車</a></li>
+                  <li><a href="#">烏龜車</a></li>
+                </ul>
+              </li>
+              <li>
+                <div class="name">其他五金配件</div>
+                <ul>
+                  <li class="active"><a href="#">全部品項</a></li>
+                  <li><a href="#">手推車</a></li>
+                  <li><a href="#">烏龜車</a></li>
+                </ul>
               </li>
             </ul>
+          </div>
+        </div>
+        <div class="product_border">
+          <div class="product_info">
+            <div class="top">
+              <div class="main_pic">
+                <div
+                  class="image"
+                  style="background-image: url(./images/products/pic.png)"
+                ></div>
+              </div>
+              <div class="text">
+                <div class="name">500kg摺疊式手推車(5吋輪組)</div>
+                <div class="desc">
+                  折疊式手推車,手把可90*折疊,輕巧易收納。面板採高級耐衝塑膠,抗腐蝕且堅固耐用,載重可達500kg,運用在各種物流搬運作業。搭配5x1.5吋台車橡膠腳輪,具有高彈性、耐磨損等特性,輕推耐用。
+                </div>
+                <div class="price_qty">
+                  <div class="price">$1699</div>
+                  <div class="qty">
+                    <label>數量</label>
+                    <div class="input">
+                      <div class="minus"><i class="fas fa-minus"></i></div>
+                      <input type="number" value="1" disabled />
+                      <div class="plus"><i class="fas fa-plus"></i></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="add_cart">
+                  <a>加入購物車</a>
+                </div>
+              </div>
+            </div>
+            <div class="bottom">
+              <ul class="tabs">
+                <li class="active">商品詳情</li>
+                <li>運費說明</li>
+                <li>注意事項</li>
+              </ul>
+              <ul class="panels">
+                <li class="active">
+                  <div class="editor">
+                    <div>
+                      <p>這是第一頁</p>
+                      <p>
+                        1.下標後約3-7個工作天出貨,例假日國定假日人員休息無法出貨.出貨日將會順延。
+                      </p>
+                      <p>2.下標後六天內未結帳將取消訂單。</p>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="editor">
+                    <div>
+                      <p>這是第二頁</p>
+                      <p>
+                        1.下標後約3-7個工作天出貨,例假日國定假日人員休息無法出貨.出貨日將會順延。
+                      </p>
+                      <p>2.下標後六天內未結帳將取消訂單。</p>
+                      <p>3.維護雙方權,拆箱時務必錄影存證清點物品數量,</p>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="editor">
+                    <div>
+                      <p>這是第三頁</p>
+                      <p>
+                        1.下標後約3-7個工作天出貨,例假日國定假日人員休息無法出貨.出貨日將會順延。
+                      </p>
+                      <p>2.下標後六天內未結帳將取消訂單。</p>
+                      <p>3.維護雙方權,拆箱時務必錄影存證清點物品數量,</p>
+                      <p>
+                        4.如有瑕疵或漏寄,請提供影片方便我們協助您,避免有爭議。
+                      </p>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
     </div>
     <footer>
       <div class="contain">
-        <div class="con">
+        <div class="container con">
           <div class="left">
             <a href="#" class="foot_logo">金吉生活推車五金</a>
             <dic class="social">
