--- a/products.html
+++ b/products.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <div class="head_contain">
+      <div class="container head_contain">
         <div class="menu_btn"><i class="fas fa-bars"></i></div>
         <a href="./" class="logo">金吉生活推車五金</a>
         <ul class="head_nav">
@@ -38,199 +38,202 @@
       "
       data-name="PRODUCTS"
     ></div>
-    <div class="contain">
+    <div class="container">
       <ul class="bread">
         <li>
           <a href="./"><i class="fas fa-home"></i>首頁</a>
         </li>
+        <li><a href="#">所有商品</a></li>
         <li><a href="#">推車系列</a></li>
         <li>手推車</li>
       </ul>
     </div>
 
-    <div class="product_frame">
-      <div class="left_menu">
-        <div class="left_menu_border">
-          <div class="title">所有商品</div>
-          <ul>
-            <li class="active">
-              <div class="name">工業腳輪</div>
-              <ul>
-                <li class="active"><a href="#">全部品項</a></li>
-                <li><a href="#">手推車</a></li>
-                <li><a href="#">烏龜車</a></li>
-              </ul>
-            </li>
-            <li>
-              <div class="name">推車系列</div>
-              <ul>
-                <li class="active"><a href="#">全部品項</a></li>
-                <li><a href="#">手推車</a></li>
-                <li><a href="#">烏龜車</a></li>
-              </ul>
-            </li>
-            <li>
-              <div class="name">調整腳架</div>
-              <ul>
-                <li class="active"><a href="#">全部品項</a></li>
-                <li><a href="#">手推車</a></li>
-                <li><a href="#">烏龜車</a></li>
-              </ul>
-            </li>
-            <li>
-              <div class="name">PU輪胎</div>
-              <ul>
-                <li class="active"><a href="#">全部品項</a></li>
-                <li><a href="#">手推車</a></li>
-                <li><a href="#">烏龜車</a></li>
-              </ul>
-            </li>
-            <li>
-              <div class="name">其他五金配件</div>
-              <ul>
-                <li class="active"><a href="#">全部品項</a></li>
-                <li><a href="#">手推車</a></li>
-                <li><a href="#">烏龜車</a></li>
-              </ul>
-            </li>
-          </ul>
+    <div class="container">
+      <div class="product_frame">
+        <div class="left_menu">
+          <div class="left_menu_border">
+            <div class="title">所有商品</div>
+            <ul>
+              <li class="active">
+                <div class="name">工業腳輪</div>
+                <ul>
+                  <li class="active"><a href="#">全部品項</a></li>
+                  <li><a href="#">手推車</a></li>
+                  <li><a href="#">烏龜車</a></li>
+                </ul>
+              </li>
+              <li>
+                <div class="name">推車系列</div>
+                <ul>
+                  <li class="active"><a href="#">全部品項</a></li>
+                  <li><a href="#">手推車</a></li>
+                  <li><a href="#">烏龜車</a></li>
+                </ul>
+              </li>
+              <li>
+                <div class="name">調整腳架</div>
+                <ul>
+                  <li class="active"><a href="#">全部品項</a></li>
+                  <li><a href="#">手推車</a></li>
+                  <li><a href="#">烏龜車</a></li>
+                </ul>
+              </li>
+              <li>
+                <div class="name">PU輪胎</div>
+                <ul>
+                  <li class="active"><a href="#">全部品項</a></li>
+                  <li><a href="#">手推車</a></li>
+                  <li><a href="#">烏龜車</a></li>
+                </ul>
+              </li>
+              <li>
+                <div class="name">其他五金配件</div>
+                <ul>
+                  <li class="active"><a href="#">全部品項</a></li>
+                  <li><a href="#">手推車</a></li>
+                  <li><a href="#">烏龜車</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-      <div class="product_border">
-        <div class="product_list">
-          <div class="item">
-            <a href="./product.html"
-              ><div
-                class="image"
-                style="background-image: url(./images/products/pic.png)"
-              >
-                <div class="hover">
-                  <i class="fas fa-search"></i>
-                  <div class="txt">查看細節</div>
+        <div class="product_border">
+          <div class="product_list">
+            <div class="item">
+              <a href="./product.html"
+                ><div
+                  class="image"
+                  style="background-image: url(./images/products/pic.png)"
+                >
+                  <div class="hover">
+                    <i class="fas fa-search"></i>
+                    <div class="txt">查看細節</div>
+                  </div>
                 </div>
-              </div>
-              <div class="name">摺疊式手推車(4吋輪)摺疊式手推車(4吋輪)</div>
-            </a>
-          </div>
-          <div class="item">
-            <a href="./product.html"
-              ><div
-                class="image"
-                style="background-image: url(./images/products/pic.png)"
-              >
-                <div class="hover">
-                  <i class="fas fa-search"></i>
-                  <div class="txt">查看細節</div>
+                <div class="name">摺疊式手推車(4吋輪)摺疊式手推車(4吋輪)</div>
+              </a>
+            </div>
+            <div class="item">
+              <a href="./product.html"
+                ><div
+                  class="image"
+                  style="background-image: url(./images/products/pic.png)"
+                >
+                  <div class="hover">
+                    <i class="fas fa-search"></i>
+                    <div class="txt">查看細節</div>
+                  </div>
                 </div>
-              </div>
-              <div class="name">摺疊式手推車(4吋輪)</div>
-            </a>
-          </div>
-          <div class="item">
-            <a href="./product.html"
-              ><div
-                class="image"
-                style="background-image: url(./images/products/pic.png)"
-              >
-                <div class="hover">
-                  <i class="fas fa-search"></i>
-                  <div class="txt">查看細節</div>
+                <div class="name">摺疊式手推車(4吋輪)</div>
+              </a>
+            </div>
+            <div class="item">
+              <a href="./product.html"
+                ><div
+                  class="image"
+                  style="background-image: url(./images/products/pic.png)"
+                >
+                  <div class="hover">
+                    <i class="fas fa-search"></i>
+                    <div class="txt">查看細節</div>
+                  </div>
                 </div>
-              </div>
-              <div class="name">摺疊式手推車(4吋輪)</div>
-            </a>
-          </div>
-          <div class="item">
-            <a href="./product.html"
-              ><div
-                class="image"
-                style="background-image: url(./images/products/pic.png)"
-              >
-                <div class="hover">
-                  <i class="fas fa-search"></i>
-                  <div class="txt">查看細節</div>
+                <div class="name">摺疊式手推車(4吋輪)</div>
+              </a>
+            </div>
+            <div class="item">
+              <a href="./product.html"
+                ><div
+                  class="image"
+                  style="background-image: url(./images/products/pic.png)"
+                >
+                  <div class="hover">
+                    <i class="fas fa-search"></i>
+                    <div class="txt">查看細節</div>
+                  </div>
                 </div>
-              </div>
-              <div class="name">摺疊式手推車(4吋輪)</div>
-            </a>
-          </div>
-          <div class="item">
-            <a href="./product.html"
-              ><div
-                class="image"
-                style="background-image: url(./images/products/pic.png)"
-              >
-                <div class="hover">
-                  <i class="fas fa-search"></i>
-                  <div class="txt">查看細節</div>
+                <div class="name">摺疊式手推車(4吋輪)</div>
+              </a>
+            </div>
+            <div class="item">
+              <a href="./product.html"
+                ><div
+                  class="image"
+                  style="background-image: url(./images/products/pic.png)"
+                >
+                  <div class="hover">
+                    <i class="fas fa-search"></i>
+                    <div class="txt">查看細節</div>
+                  </div>
                 </div>
-              </div>
-              <div class="name">摺疊式手推車(4吋輪)</div>
-            </a>
-          </div>
-          <div class="item">
-            <a href="./product.html"
-              ><div
-                class="image"
-                style="background-image: url(./images/products/pic.png)"
-              >
-                <div class="hover">
-                  <i class="fas fa-search"></i>
-                  <div class="txt">查看細節</div>
+                <div class="name">摺疊式手推車(4吋輪)</div>
+              </a>
+            </div>
+            <div class="item">
+              <a href="./product.html"
+                ><div
+                  class="image"
+                  style="background-image: url(./images/products/pic.png)"
+                >
+                  <div class="hover">
+                    <i class="fas fa-search"></i>
+                    <div class="txt">查看細節</div>
+                  </div>
                 </div>
-              </div>
-              <div class="name">摺疊式手推車(4吋輪)</div>
-            </a>
-          </div>
-          <div class="item">
-            <a href="./product.html"
-              ><div
-                class="image"
-                style="background-image: url(./images/products/pic.png)"
-              >
-                <div class="hover">
-                  <i class="fas fa-search"></i>
-                  <div class="txt">查看細節</div>
+                <div class="name">摺疊式手推車(4吋輪)</div>
+              </a>
+            </div>
+            <div class="item">
+              <a href="./product.html"
+                ><div
+                  class="image"
+                  style="background-image: url(./images/products/pic.png)"
+                >
+                  <div class="hover">
+                    <i class="fas fa-search"></i>
+                    <div class="txt">查看細節</div>
+                  </div>
                 </div>
-              </div>
-              <div class="name">摺疊式手推車(4吋輪)</div>
-            </a>
-          </div>
-          <div class="item">
-            <a href="./product.html"
-              ><div
-                class="image"
-                style="background-image: url(./images/products/pic.png)"
-              >
-                <div class="hover">
-                  <i class="fas fa-search"></i>
-                  <div class="txt">查看細節</div>
+                <div class="name">摺疊式手推車(4吋輪)</div>
+              </a>
+            </div>
+            <div class="item">
+              <a href="./product.html"
+                ><div
+                  class="image"
+                  style="background-image: url(./images/products/pic.png)"
+                >
+                  <div class="hover">
+                    <i class="fas fa-search"></i>
+                    <div class="txt">查看細節</div>
+                  </div>
                 </div>
-              </div>
-              <div class="name">摺疊式手推車(4吋輪)</div>
-            </a>
-          </div>
-          <div class="item">
-            <a href="./product.html"
-              ><div
-                class="image"
-                style="background-image: url(./images/products/pic.png)"
-              >
-                <div class="hover">
-                  <i class="fas fa-search"></i>
-                  <div class="txt">查看細節</div>
+                <div class="name">摺疊式手推車(4吋輪)</div>
+              </a>
+            </div>
+            <div class="item">
+              <a href="./product.html"
+                ><div
+                  class="image"
+                  style="background-image: url(./images/products/pic.png)"
+                >
+                  <div class="hover">
+                    <i class="fas fa-search"></i>
+                    <div class="txt">查看細節</div>
+                  </div>
                 </div>
-              </div>
-              <div class="name">摺疊式手推車(4吋輪)</div>
-            </a>
+                <div class="name">摺疊式手推車(4吋輪)</div>
+              </a>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    
+
     <footer>
       <div class="contain">
-        <div class="con">
+        <div class="container con">
           <div class="left">
             <a href="#" class="foot_logo">金吉生活推車五金</a>
             <dic class="social">
