--- a/index.html
+++ b/index.html
@@ -15,6 +15,40 @@
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
+    <div class="cart_pop">
+      <div class="cart_btn">
+        <img src="./images/common/cart_btn.png" alt="" />
+      </div>
+      <div class="cart_con">
+        <div class="list">
+          <div class="item">
+            <div class="image">
+              <img src="./images/common/product_01.png" alt="" />
+            </div>
+            <div class="text">
+              <div class="name">500kg摺疊式手推車(5吋輪組)</div>
+              <div class="price_qty">
+                $1200*1
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="image">
+              <img src="./images/common/product_01.png" alt="" />
+            </div>
+            <div class="text">
+              <div class="name">500kg摺疊式手推車(5吋輪組)</div>
+              <div class="price_qty">
+                $1200*1
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="go_cart">
+          <a href="./cart.html">前往結帳</a>
+        </div>
+      </div>
+    </div>
     <header>
       <div class="container head_contain">
         <div class="menu_btn"><i class="fas fa-bars"></i></div>
@@ -138,7 +172,9 @@
           </a>
           <a href="./news_info.html" class="item"
             ><div class="time">2021-01-23</div>
-            <span>物流零件專業製造新規格登場!物流零件專業製造新規格登場!物流零件專業製造新規格登場!</span>
+            <span
+              >物流零件專業製造新規格登場!物流零件專業製造新規格登場!物流零件專業製造新規格登場!</span
+            >
           </a>
         </div>
       </div>
