--- a/cart.html
+++ b/cart.html
@@ -15,6 +15,36 @@
     <link rel="stylesheet" href="./css/cart.css" />
   </head>
   <body>
+    <div class="cart_pop">
+      <div class="cart_btn">
+        <img src="./images/common/cart_btn.png" alt="" />
+      </div>
+      <div class="cart_con">
+        <div class="list">
+          <div class="item">
+            <div class="image">
+              <img src="./images/common/product_01.png" alt="" />
+            </div>
+            <div class="text">
+              <div class="name">500kg摺疊式手推車(5吋輪組)</div>
+              <div class="price_qty">$1200*1</div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="image">
+              <img src="./images/common/product_01.png" alt="" />
+            </div>
+            <div class="text">
+              <div class="name">500kg摺疊式手推車(5吋輪組)</div>
+              <div class="price_qty">$1200*1</div>
+            </div>
+          </div>
+        </div>
+        <div class="go_cart">
+          <a href="./cart.html">前往結帳</a>
+        </div>
+      </div>
+    </div>
     <header>
       <div class="container head_contain">
         <div class="menu_btn"><i class="fas fa-bars"></i></div>
@@ -64,37 +94,41 @@
                 <div class="td pic">
                   <img src="./images/cart/product_01.png" alt="" />
                 </div>
-                <div class="td name">500kg摺疊式手推車 (5时輪組)</div>
-                <div class="td price">$1200</div>
-                <div class="td qty">
-                  <select name="" id="">
-                    <option value="1">1</option>
-                    <option value="1">2</option>
-                    <option value="1">3</option>
-                    <option value="1">4</option>
-                    <option value="1">5</option>
-                  </select>
+                <div class="t_group">
+                  <div class="td name">500kg摺疊式手推車 (5时輪組)</div>
+                  <div class="td price" data-name="單價：">$1200</div>
+                  <div class="td qty">
+                    <select name="" id="">
+                      <option value="1">1</option>
+                      <option value="1">2</option>
+                      <option value="1">3</option>
+                      <option value="1">4</option>
+                      <option value="1">5</option>
+                    </select>
+                  </div>
+                  <div class="td m_total" data-name="小計：">$1200</div>
+                  <div class="td operate"><i class="fas fa-times"></i></div>
                 </div>
-                <div class="td m_total">$1200</div>
-                <div class="td operate"><i class="fas fa-times"></i></div>
               </div>
               <div class="tr pic">
                 <div class="td">
                   <img src="./images/cart/product_01.png" alt="" />
                 </div>
-                <div class="td name">500kg摺疊式手推車 (5时輪組)</div>
-                <div class="td price">$1200</div>
-                <div class="td qty">
-                  <select name="" id="">
-                    <option value="1">1</option>
-                    <option value="1">2</option>
-                    <option value="1">3</option>
-                    <option value="1">4</option>
-                    <option value="1">5</option>
-                  </select>
+                <div class="t_group">
+                  <div class="td name">500kg摺疊式手推車 (5时輪組)</div>
+                  <div class="td price" data-name="單價：">$1200</div>
+                  <div class="td qty">
+                    <select name="" id="">
+                      <option value="1">1</option>
+                      <option value="1">2</option>
+                      <option value="1">3</option>
+                      <option value="1">4</option>
+                      <option value="1">5</option>
+                    </select>
+                  </div>
+                  <div class="td m_total" data-name="小計：">$1200</div>
+                  <div class="td operate"><i class="fas fa-times"></i></div>
                 </div>
-                <div class="td m_total">$1200</div>
-                <div class="td operate"><i class="fas fa-times"></i></div>
               </div>
             </div>
             <div class="tfoot">
@@ -118,13 +152,12 @@
               </div>
             </div>
             <div class="right">
-                <label for="">備註</label
-                ><textarea name="" id=""></textarea>
+              <label for="">備註</label><textarea name="" id=""></textarea>
             </div>
           </div>
           <div class="btns">
-            <div class="back">返回繼續購物</div>
-            <div class="send">$確認下單</div>
+            <a href="#" class="back">返回繼續購物</a>
+            <a href="./cart_finish.html" class="send">$確認下單</a>
           </div>
         </div>
       </div>
