--- a/products.html
+++ b/products.html
@@ -15,6 +15,40 @@
     <link rel="stylesheet" href="./css/products.css" />
   </head>
   <body>
+    <div class="cart_pop">
+      <div class="cart_btn">
+        <img src="./images/common/cart_btn.png" alt="" />
+      </div>
+      <div class="cart_con">
+        <div class="list">
+          <div class="item">
+            <div class="image">
+              <img src="./images/common/product_01.png" alt="" />
+            </div>
+            <div class="text">
+              <div class="name">500kg摺疊式手推車(5吋輪組)</div>
+              <div class="price_qty">
+                $1200*1
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="image">
+              <img src="./images/common/product_01.png" alt="" />
+            </div>
+            <div class="text">
+              <div class="name">500kg摺疊式手推車(5吋輪組)</div>
+              <div class="price_qty">
+                $1200*1
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="go_cart">
+          <a href="./cart.html">前往結帳</a>
+        </div>
+      </div>
+    </div>
     <header>
       <div class="container head_contain">
         <div class="menu_btn"><i class="fas fa-bars"></i></div>
