--- a/product.html
+++ b/product.html
@@ -27,9 +27,7 @@
             </div>
             <div class="text">
               <div class="name">500kg摺疊式手推車(5吋輪組)</div>
-              <div class="price_qty">
-                $1200*1
-              </div>
+              <div class="price_qty">$1200*1</div>
             </div>
           </div>
           <div class="item">
@@ -38,9 +36,7 @@
             </div>
             <div class="text">
               <div class="name">500kg摺疊式手推車(5吋輪組)</div>
-              <div class="price_qty">
-                $1200*1
-              </div>
+              <div class="price_qty">$1200*1</div>
             </div>
           </div>
         </div>
@@ -141,23 +137,27 @@
                 ></div>
               </div>
               <div class="text">
-                <div class="name">500kg摺疊式手推車(5吋輪組)</div>
-                <div class="desc">
-                  折疊式手推車,手把可90*折疊,輕巧易收納。面板採高級耐衝塑膠,抗腐蝕且堅固耐用,載重可達500kg,運用在各種物流搬運作業。搭配5x1.5吋台車橡膠腳輪,具有高彈性、耐磨損等特性,輕推耐用。
-                </div>
-                <div class="price_qty">
-                  <div class="price">$1699</div>
-                  <div class="qty">
-                    <label>數量</label>
-                    <div class="input">
-                      <div class="minus"><i class="fas fa-minus"></i></div>
-                      <input type="number" value="1" disabled />
-                      <div class="plus"><i class="fas fa-plus"></i></div>
-                    </div>
+                <div class="text_top">
+                  <div class="name">500kg摺疊式手推車(5吋輪組)</div>
+                  <div class="desc">
+                    折疊式手推車,手把可90*折疊,輕巧易收納。面板採高級耐衝塑膠,抗腐蝕且堅固耐用,載重可達500kg,運用在各種物流搬運作業。搭配5x1.5吋台車橡膠腳輪,具有高彈性、耐磨損等特性,輕推耐用。
                   </div>
                 </div>
-                <div class="add_cart">
-                  <a>加入購物車</a>
+                <div class="text_botoom">
+                  <div class="price_qty">
+                    <div class="price">$1699</div>
+                    <div class="qty">
+                      <label>數量</label>
+                      <div class="input">
+                        <div class="minus"><i class="fas fa-minus"></i></div>
+                        <input type="number" value="1" disabled />
+                        <div class="plus"><i class="fas fa-plus"></i></div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="add_cart">
+                    <a>加入購物車</a>
+                  </div>
                 </div>
               </div>
             </div>
