--- a/product.html
+++ b/product.html
@@ -140,7 +140,10 @@
                 <div class="text_top">
                   <div class="name">500kg摺疊式手推車(5吋輪組)</div>
                   <div class="desc">
-                    折疊式手推車,手把可90*折疊,輕巧易收納。面板採高級耐衝塑膠,抗腐蝕且堅固耐用,載重可達500kg,運用在各種物流搬運作業。搭配5x1.5吋台車橡膠腳輪,具有高彈性、耐磨損等特性,輕推耐用。
+                    <span
+                      >折疊式手推車,手把可90*折疊,輕巧易收納。面板採高級耐衝塑膠,抗腐蝕且堅固耐用,載重可達500kg,運用在各種物流搬運作業。搭配5x1.5吋台車橡膠腳輪,具有高彈性、耐磨損等特性,輕推耐用。折疊式手推車,手把可90*折疊,輕巧易收納。面板採高級耐衝塑膠,抗腐蝕且堅固耐用,載重可達500kg,運用在各種物流搬運作業。搭配5x1.5吋台車橡膠腳輪,具有高彈性、耐磨損等特性,輕推耐用。
+                      折疊式手推車,手把可90*折疊,輕巧易收納。面板採高級耐衝塑膠,抗腐蝕且堅固耐用,載重可達500kg,運用在各種物流搬運作業。搭配5x1.5吋台車橡膠腳輪,具有高彈性、耐磨損等特性,輕推耐用。</span
+                    >
                   </div>
                 </div>
                 <div class="text_botoom">
